<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarPassword">

    <RelativeLayout
        android:id="@+id/ToolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">
        
        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:text="@string/Txt_olvide_pass"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:padding="10dp"
        android:layout_below="@+id/ToolbarRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/Iv_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/password"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:id="@+id/Txt_instrucciones"
            android:layout_below="@id/Iv_password"
            android:layout_marginTop="7dp"
            android:textAlignment="center"
            android:text="@string/Txt_instrucciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_below="@id/Txt_instrucciones"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ET_email"
                android:hint="@string/ET_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_enviar_instrucciones"
            android:text="@string/Btn_enviar_instrucciones"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/TIL_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

    </RelativeLayout>

</RelativeLayout>